[feat] Refactored retranslator & implemented logging
