# swagger/ozonmp/ssn_service_api/v1/ssn_service_api.swagger.json
@@ -251,12 +251,7 @@
       }
     },
     "v1RemoveServiceV1Response": {
-      "type": "object",
-      "properties": {
-        "isFounded": {
-          "type": "boolean"
-        }
-      }
+      "type": "object"
     },
     "v1Service": {
       "type": "object",
